<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.view.GameSummaryActivity"
    android:gravity="center"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="GAME OVER"
            android:textSize="68sp" />

        <TextView
            android:id="@+id/game_parameters_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="GENERAL KNOWLEDGE (EASY) - TRUE OR FALSE"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Correct answers -->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/circle"
                    android:scaleType="centerInside"
                    android:src="@drawable/outline_done_black_24"
                    android:translationZ="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:translationZ="1dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/txt_total_correct_answers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textSize="60sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correct_answers"
                        android:textSize="12sp"/>

                </LinearLayout>

            </FrameLayout>

            <!-- Incorrect answers -->
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/circle"
                    android:scaleType="centerInside"
                    android:src="@drawable/outline_close_black_24"
                    android:translationZ="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="15dp"
                    android:translationZ="1dp">

                    <TextView
                        android:id="@+id/txt_total_incorrect_answers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6"
                        android:textSize="60sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/incorrect_answers"
                        android:textSize="12sp"/>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/play_again"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:onClick="playAgain"
            />

    </RelativeLayout>

</LinearLayout>