<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".mvp.view.MainActivity">

    <FrameLayout
        android:id="@+id/loading_screen_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0.7"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="48sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginTop="32dp"/>

    <LinearLayout
        android:id="@+id/ll_game_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:padding="26dp">

        <!--  Game type -->
        <LinearLayout
            android:id="@+id/ll_game_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Game type"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/txt_select_game_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_an_option"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:drawableEnd="@drawable/outline_navigate_next_black_20"/>

            <TextView
                android:id="@+id/txt_error_game_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:visibility="gone"/>

        </LinearLayout>

        <!--  Category -->
        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/txt_select_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_an_option"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:drawableEnd="@drawable/outline_navigate_next_black_20"/>

            <TextView
                android:id="@+id/txt_error_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>

        <!--  Difficulty -->
        <LinearLayout
            android:id="@+id/ll_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Difficulty"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/txt_select_difficulty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_an_option"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:drawableEnd="@drawable/outline_navigate_next_black_20"/>

            <TextView
                android:id="@+id/txt_error_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/start_game"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:minHeight="70dp"
            />

    </RelativeLayout>


</LinearLayout>